app de router angular

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,12 @@
-<p>home works!</p>
+<h1 class="fst-italic text-center mb-5">Lista de Posts</h1>
+
+<div class="row" *ngFor="let post of posts">
+  <div class="col">
+    <h2>Titulo del Post</h2>
+    <a href="">Ver autor</a>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde consectetur quas cum qui esse impedit in accusamus ex eius, maiores odio inventore, voluptatibus quae ea numquam alias libero modi aperiam.</p>
+    <button class="btn btn-secondary">Comentarios</button>
+  </div>
+</div>
+
+
