--- a/src/app/pages/user/user.component.html
+++ b/src/app/pages/user/user.component.html
@@ -1,1 +1,41 @@
-<p>user works!</p>
+<div *ngIf="errorMessage.length > 0" class="alert alert-danger" role="alert">
+  {{ errorMessage }}
+</div>
+
+<div class="container mt-5 col-sm-6 offset-sm-3">
+  <table *ngIf="user; else templateEmpty" class="table">
+    <thead>
+      <tr>
+        <th scope="col">Nombre</th>
+        <th scope="col">Nick</th>
+        <th scope="col">Email</th>
+        <th scope="col">Dirección</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr >
+        <td>{{ user.name }}</td>
+        <td>{{ user.username }}</td>
+        <td>{{ user.email }}</td>
+        <td>{{ user.address.street }} - {{ user.address.suite }}</td>
+        <!-- <td>{{ user.address?.street }} - {{ user.address?.suite }}</td> -->
+            <!-- {{ user.null.street }} -->
+      </tr>
+    </tbody>
+  </table>
+</div>
+
+<ng-template #templateEmpty>
+  <div class="alert alert-warning" role="alert">
+    No existe un usuario relacionado con ese ID
+  </div>
+</ng-template>
+
+<!-- <pre>
+  {{ user | json }}
+</pre> -->
+
+
+<!-- columnas 12
+
+col, col, col,               col, col, col, col, col, col,                     col, col, col -->
