--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -11,8 +11,9 @@
 
     <p>{{ post.body }}</p>
     <button class="btn btn-secondary" (click)="obtenerComentariosPorId(post.id)">Comentarios</button>
+
     <ng-container *ngFor="let comentFilter of comentariosFiltradosPorPost">
-      <div class="mt-3 col-sm-10 offset-sm-1">
+      <div class="mt-3 col-sm-10 offset-sm-1" *ngIf="comentFilter.postId == post.id">
         <label class="fw-bold">User: {{ comentFilter.email}}</label>
         <br>
         <label class="fw-bold">Respuesta: </label>
